# tereo

./: .gitignore  README.md  START.md  TEREO_ERR_LOG.md  TEREO_UPDATE_LOG.md  WHY.md  setup.cfg
.github/workflows/: publish-pypi.yml
dogfood/: README.md
dogfood/promises/: harden-runtime.md
flows/: README.md  agent-loop.md  local-loop.md  pr-ci.md
runtime/: README.md
runtime/examples/: README.md  quickstart.sh
runtime/examples/github/: tereo-pr-comment.sh  tereo-pr-comment.yml
runtime/src/tereo/: __main__.py  cli.py  constants.py  judge.py  measure.py  receipt.py
runtime/tests/: test_cli.py
skill/: README.md  SKILL.md  promise-template.md
skill/agents/: openai.yaml
