[metadata]
name = tereo
version = 0.1.2
description = Proof layer for software changes. Keep only what proves itself.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Woojoo Kim
author_email = hello@kimwoojoo.me
url = https://github.com/kim-woojoo/tereo

[options]
package_dir =
    = runtime/src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = runtime/src

[options.entry_points]
console_scripts =
    tereo = tereo.cli:main
